# CAENlibs

./: CMakeLists.txt  README.md
.github/workflows/: Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-M2sys.yml  Windows-MSVC.yml  Windows-MSYS2.yml
CAENComm/: CMakeLists.txt
CAENComm/include/: CAENComm.h
CAENComm/lib/Unix/x64/: libCAENComm.so.1.4.1
CAENComm/lib/Windows/x86/: CAENComm.lib
CAENComm/lib/Windows/x86_64/: CAENComm.lib
CAENDPP/: CMakeLists.txt
CAENDPP/include/: CAENDPPLib.h  CAENDPPLibTypes.h
CAENDPP/lib/Unix/x86/: libCAENDPPLib.so.1.7.2
CAENDPP/lib/Windows/x86/: CAENDPPLib.lib
CAENDPP/lib/Windows/x86_64/: CAENDPPLib.lib
CAENDigitizer/: CMakeLists.txt
CAENDigitizer/include/: CAENDigitizer.h  CAENDigitizerType.h
CAENDigitizer/lib/Unix/x64/: libCAENDigitizer.so.2.16.2
CAENDigitizer/lib/Windows/x64/: CAENDigitizer.lib
CAENDigitizer/lib/Windows/x86/: CAENDigitizer.lib
CAENHV/: CMakeLists.txt
CAENHV/include/: CAENHVWrapper.h
CAENHV/lib/Unix/x64/: libcaenhvwrapper.so.6.1
CAENVME/: CMakeLists.txt
CAENVME/include/: CAENVMElib.h  CAENVMEoslib.h  CAENVMEtypes.h
CAENVME/lib/Unix/x86/: libCAENVME.so.3.2.0
CAENVME/lib/Windows/x86/: CAENVMELib.lib
CAENVME/lib/Windows/x86_64/: CAENVMELib.lib
cmake/: CAENlibsConfig.cmake.in  FindLibUSB.cmake  detect-arch.c  detect-arch.cmake
tests/: CAENComm.cpp  CAENDPP.cpp  CAENDigitizer.cpp  CAENHV.cpp  CAENVME.cpp  CMakeLists.txt
