set(CMAKE_MACOSX_RPATH TRUE)
set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_FULL_LIBDIR}")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_executable(AppCAENVME CAENVME.cpp)
target_link_libraries(AppCAENVME PRIVATE CAENVME::CAENVME)
set_target_properties(AppCAENVME PROPERTIES OUTPUT_NAME CAENVME)
install(TARGETS AppCAENVME)
add_test(NAME CAENVME COMMAND CAENVME WORKING_DIRECTORY ${CMAKE_INSTALL_FULL_BINDIR})

add_executable(AppCAENComm CAENComm.cpp)
target_link_libraries(AppCAENComm PRIVATE CAENComm::CAENComm)
set_target_properties(AppCAENComm PROPERTIES OUTPUT_NAME CAENComm)
install(TARGETS AppCAENComm)
add_test(NAME CAENComm COMMAND CAENComm WORKING_DIRECTORY ${CMAKE_INSTALL_FULL_BINDIR})

add_executable(AppCAENDigitizer CAENDigitizer.cpp)
target_link_libraries(AppCAENDigitizer PRIVATE CAENDigitizer::CAENDigitizer)
set_target_properties(AppCAENDigitizer PROPERTIES OUTPUT_NAME CAENDigitizer)
install(TARGETS AppCAENDigitizer)
add_test(NAME CAENDigitizer COMMAND CAENDigitizer WORKING_DIRECTORY ${CMAKE_INSTALL_FULL_BINDIR})

add_executable(AppCAENHV CAENHV.cpp)
target_link_libraries(AppCAENHV PRIVATE CAENHV::CAENHV)
set_target_properties(AppCAENHV PROPERTIES OUTPUT_NAME CAENHV)
install(TARGETS AppCAENHV)
add_test(NAME CAENHV COMMAND CAENHV WORKING_DIRECTORY ${CMAKE_INSTALL_FULL_BINDIR})

add_executable(AppCAENDPP CAENDPP.cpp)
target_link_libraries(AppCAENDPP PRIVATE CAENDPP::CAENDPP)
set_target_properties(AppCAENDPP PROPERTIES OUTPUT_NAME CAENDPP)
install(TARGETS AppCAENDPP)
add_test(NAME CAENDPP COMMAND CAENDPP WORKING_DIRECTORY ${CMAKE_INSTALL_FULL_BINDIR})
